Add MAVEN_OPTS that are compatible with JDK7 but comment out by default. See DEVPLAT-456 for more info