@@ -9,6 +9,9 @@ if not exist %springloadedfile% (
   mvn validate -Psetup
 )
 
+:: Use these settings if you're using JDK7
+:: set MAVEN_OPTS=-javaagent:"%springloadedfile%" -noverify -Xms256m -Xmx2G -XX:PermSize=300m
+
 :: Spring loaded does not work very well with 5.1 at the moment, breaks the H2 db after first run and then restart
 :: set MAVEN_OPTS=-javaagent:"%springloadedfile%" -noverify -Xms256m -Xmx2G
 set MAVEN_OPTS=-noverify -Xms256m -Xmx2G
